[refactor] Java10: Use pre-defined charset, making catch exception not needed anymore