@@ -2090,7 +2090,7 @@ public class InteractiveClient {
         printNotice();
 
         // Fix "uri" property: Excalibur CLI can't parse dashes, so we need to URL encode them:
-        properties.setProperty(URI, URLDecoder.decode(properties.getProperty(URI), UTF_8.name()));
+        properties.setProperty(URI, URLDecoder.decode(properties.getProperty(URI), UTF_8));
 
         final boolean interactive = isInteractive();
 
